--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -11,7 +11,7 @@
       <span class="text-red-500 bg-white rounded px-2">Metanol de Oriente Metor S A</span>
       <span class="text-blue-500 bg-white rounded px-2 ml-2 sm:ml-4">DataLaing MaPreX</span>
     </p>
-<a href="/listado">
+<a href="/proceso">
     <p-button
     icon="pi pi-play-circle"
       type="button"
