--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -24,9 +24,9 @@
     ]"
   >
     <ng-template #caption>
-      <div class="container mx-auto p-4">  <div class="flex flex-col md:flex-row md:items-center md:justify-between"> <div>
-        <h2><b>Consultando Listado de Procesos</b></h2>
-      <div class="flex flex-wrap justify-end gap-2">
+      <div class="container mx-auto p-4">
+        <div class="flex flex-col md:flex-row md:items-center md:justify-between">
+      <div class="flex flex-wrap justify-start gap-2">
         <p-iconfield iconPosition="left" class="ml-auto">
           <p-inputicon>
             <i class="pi pi-search"></i>
@@ -39,18 +39,6 @@
           />
         </p-iconfield>
       </div>
-    <div class="flex flex-wrap justify-end gap-2 mt-4 md:mt-0"> <p-iconfield iconPosition="left" class="ml-auto w-full md:w-auto"> <p-inputicon>
-          <i class="pi pi-search"></i>
-        </p-inputicon>
-        <input
-          pInputText
-          type="text"
-          (input)="onGlobalFilter(dt2, $event)"
-          placeholder="Buscar Proceso"
-          class="w-full md:w-auto"  />
-      </p-iconfield>
-    </div>
-  </div>
 </div>
 </div>
     </ng-template>
