--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -21,6 +21,7 @@
       'partidas_totales',
       'descripcion_corta_nombre_contrato',
     ]"
+    id="table-data"
   >
     <ng-template #caption>
       <div class="container mx-auto p-4">
@@ -37,6 +38,7 @@
             placeholder="Buscar Proceso"
           />
         </p-iconfield>
+        <p-button (click)="export()" label="Exportar" icon="pi pi-file-excel" severity="success" />
       </div>
 </div>
 </div>
