exportacion de pdf

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -39,6 +39,9 @@
           />
         </p-iconfield>
         <p-button (click)="export('proceso')" label="Exportar" icon="pi pi-file-excel" severity="success" />
+
+        <p-button (click)="generatePdf()" label="Exportar" icon="pi pi-file-pdf" severity="danger" />
+
       </div>
 </div>
 </div>
