--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,7 +50,7 @@
                     pInputText
                     id="email1"
                     type="text"
-                    placeholder="Email address"
+                    required
                     class="w-full md:w-[30rem] mb-8"
                     id="username"
                     [(ngModel)]="username"
@@ -76,13 +76,12 @@
                 ></p-password>
 
                 <br />
-                <p-button
-                    severity="danger"
-                    label="Aceptar"
-                    styleClass="w-full"
-                    routerLink="/"
-                    (onClick)="login()"
-                ></p-button>
+                <button
+                class="w-full bg-red-500 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded transition-colors duration-300"
+                (click)="login()"
+                >
+                  Ingresar
+                </button>
             </div>
         </div>
     </div>
