cambios en excel

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
             <div class="text-center mb-8">
                 <div class="flex justify-between items-center">
                     <img
-                        src="Metor.webp"
+                        src="Metor.png"
                         class="w-24 sm:w-32 md:w-14 lg:w-16 h-auto"
                         alt=""
                     />
