--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -40,7 +40,7 @@
         </p-iconfield>
         <p-button (click)="exportToExcel(procesosUnicosArray,'unico')" label="Exportar" icon="pi pi-file-excel" severity="success" />
 
-        <p-button (click)="generatePdf()" label="Exportar" icon="pi pi-file-pdf" severity="danger" />
+        <p-button (click)="generatePdf(procesosUnicosArray)" label="Exportar" icon="pi pi-file-pdf" severity="danger" />
 
       </div>
 </div>
