--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -38,3 +38,50 @@
           width: 15% !important;
           text-align: center;
         }
+.borderg {
+  width: 590px;
+}
+
+.grid {
+  display: grid;
+  gap: 16px;
+  /* Espacio entre los elementos */
+  justify-content: center;
+  /* Centra los elementos horizontalmente */
+}
+
+/* Para pantallas grandes (PC) */
+@media (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /* Columnas flexibles */
+  }
+}
+
+/* Para pantallas pequeñas (móvil) */
+@media (max-width: 767px) {
+  .grid {
+    grid-template-columns: 1fr;
+    /* 1 columna */
+  }
+}
+
+.largoh {
+  width: 100%;
+  height: 300px;
+  /* Ajusta la altura según necesites */
+}
+    .p-dialog-title {
+      text-align: center;
+      width: 100%;
+    }
+
+        .button-paginator-container {
+          display: flex;
+          flex-direction: column;
+          /* Apila los elementos verticalmente */
+          align-items: center;
+          /* Centra horizontalmente */
+          gap: 16px;
+          /* Espacio entre el botón y el paginador */
+        }
