cambiando credenciales para login

--- a/src/app/landing/components/herowidget.html
+++ b/src/app/landing/components/herowidget.html
@@ -1,7 +1,7 @@
 <div id="hero">
   <div class="fondoescrito mx-4 md:mx-20 mt-0 md:mt-6">
     <h1 class="text-lg sm:text-lg md:text-2xl font-bold text-white leading-tight mb-4">
-      <span class="font-light block"><b>BIENVENIDOS A “CREACIÓN
+      <span class="font-light block"><b>PROYECTO: “CREACIÓN
         DE BASE DE DATOS DE 1000 PARTIDAS CON SUS ANÁLISIS DE PRECIOS UNITARIOS
         (APU) E INSUMOS, ASÍ COMO 4 PRESUPUESTOS TIPO PARA METOR, SEGÚN
         ESPECIFICACIONES DEL CONTRATANTE EN ÁREAS DIVERSAS A SER ACORDADAS”.</b></span>
